[gd_scene load_steps=19 format=2]

[ext_resource path="res://img/enemies/blob/blob5.png" type="Texture" id=1]
[ext_resource path="res://img/enemies/blob/blob3.png" type="Texture" id=2]
[ext_resource path="res://img/enemies/blob/blob2.png" type="Texture" id=3]
[ext_resource path="res://scripts/Enemy/Slime.gd" type="Script" id=4]
[ext_resource path="res://img/trees/tree-shadow.png" type="Texture" id=5]
[ext_resource path="res://img/attacks/land_attack.png" type="Texture" id=6]
[ext_resource path="res://scenes/UI/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/UI/HealthSystem.tscn" type="PackedScene" id=8]
[ext_resource path="res://img/enemies/blob/blob4.png" type="Texture" id=9]
[ext_resource path="res://img/enemies/blob/blob1.png" type="Texture" id=10]
[ext_resource path="res://img/enemies/blob/blob7.png" type="Texture" id=11]
[ext_resource path="res://img/enemies/blob/blob6.png" type="Texture" id=12]
[ext_resource path="res://img/enemies/blob/blob10.png" type="Texture" id=13]
[ext_resource path="res://img/enemies/blob/blob9.png" type="Texture" id=14]
[ext_resource path="res://img/enemies/blob/blob8.png" type="Texture" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 34.7324

[sub_resource type="CapsuleShape2D" id=2]
radius = 53.1078
height = 42.7093

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": false,
"name": "jump",
"speed": 18.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 1 ) ],
"loop": false,
"name": "land",
"speed": 18.0
} ]

[node name="Slime" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 44
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]
z_index = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, 26 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HealthSystem" parent="." instance=ExtResource( 8 )]

[node name="UI" type="Node2D" parent="."]

[node name="Label" type="Label" parent="UI"]
margin_left = -36.8703
margin_top = -77.8852
margin_right = 37.1297
margin_bottom = -52.8852
text = "charge"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="UI" instance=ExtResource( 7 )]
margin_top = -50.0
margin_right = 56.0
margin_bottom = -30.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="LandArea" type="Sprite" parent="."]
modulate = Color( 0.156863, 0.32549, 0.619608, 0.501961 )
position = Vector2( 0, 28 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -30 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 3 )
animation = "idle"
frame = 7

[node name="LandTween" type="Tween" parent="."]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="dead" from="HealthSystem" to="." method="_on_HealthSystem_dead"]
[connection signal="health_updated" from="HealthSystem" to="UI/HealthBar" method="_on_HealthSystem_health_updated"]
